--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>Welcome to the Dashboard</h1>
                 <div class="container main">
                     <h1>User Details</h1>
-                    <p>Here is the table for <i>All Users</i>.</p>
+                    <p>Here is the table for <i>All Users</i> at a glance.</p>
                     <table>
                         <thead>
                             <tr>
